--- a/city_price_analysis_on_date.ipynb
+++ b/city_price_analysis_on_date.ipynb
@@ -24,8 +24,6 @@
     "import statsmodels.api as sm\n",
     "\n",
     "from scipy.stats import normaltest  #для проверки распределения на нормальность\n",
-    "from scipy.stats import shapiro  #для проверки распределения на нормальность\n",
-    "from statsmodels.graphics.gofplots import qqplot  #для проверки распределения на нормальность\n",
     "\n",
     "from scipy.stats import spearmanr  #корреляция Спирмена\n",
     "\n",
@@ -35,11 +33,7 @@
     "\n",
     "from collections import Counter\n",
     "\n",
-    "from datetime import timedelta\n",
-    "\n",
-    "from math import log\n",
-    "from math import exp\n",
-    "from scipy.stats import boxcox"
+    "from datetime import timedelta"
    ]
   },
   {
@@ -2402,16 +2396,16 @@
     {
      "data": {
       "text/plain": [
-       "{'Eixample': 1,\n",
-       " 'Les Corts': 2,\n",
-       " 'Nou Barris': 3,\n",
-       " 'Sant Martí': 4,\n",
-       " 'Ciutat Vella': 5,\n",
-       " 'Gràcia': 6,\n",
-       " 'Horta-Guinardó': 7,\n",
-       " 'Sant Andreu': 8,\n",
-       " 'Sants-Montjuïc': 9,\n",
-       " 'Sarrià-Sant Gervasi': 10}"
+       "{'Les Corts': 1,\n",
+       " 'Eixample': 2,\n",
+       " 'Sarrià-Sant Gervasi': 3,\n",
+       " 'Horta-Guinardó': 4,\n",
+       " 'Gràcia': 5,\n",
+       " 'Sant Martí': 6,\n",
+       " 'Ciutat Vella': 7,\n",
+       " 'Sants-Montjuïc': 8,\n",
+       " 'Nou Barris': 9,\n",
+       " 'Sant Andreu': 10}"
       ]
      },
      "execution_count": 73,
@@ -2623,7 +2617,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f6aab879dc0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f0f882746d0>"
       ]
      },
      "execution_count": 81,
@@ -2663,7 +2657,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f6aaa8b1fa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f0f83f2de80>"
       ]
      },
      "execution_count": 82,
@@ -3057,7 +3051,7 @@
     {
      "data": {
       "text/plain": [
-       "<bevel.linear_ordinal_regression.OrderedLogit at 0x7f6a9223fb20>"
+       "<bevel.linear_ordinal_regression.OrderedLogit at 0x7f0f83023e50>"
       ]
      },
      "execution_count": 94,
@@ -3083,18 +3077,18 @@
       "n=19867\n",
       "                                  beta  se(beta)      p  lower 0.95  upper 0.95     \n",
       "attribute names                                                                     \n",
-      "neighbourhood_index            -0.0013    0.0007 0.0701     -0.0028      0.0001    .\n",
-      "room_class                      2.1090    0.0309 0.0000      2.0485      2.1695  ***\n",
+      "neighbourhood_index            -0.0040    0.0006 0.0000     -0.0053     -0.0027  ***\n",
+      "room_class                      2.1058    0.0309 0.0000      2.0453      2.1663  ***\n",
       "availability_365                0.0008    0.0001 0.0000      0.0006      0.0009  ***\n",
       "calculated_host_listings_count  0.0018    0.0004 0.0000      0.0010      0.0027  ***\n",
       "number_of_reviews               0.0031    0.0004 0.0000      0.0024      0.0038  ***\n",
-      "reviews_per_month              -0.2584    0.0221 0.0000     -0.3017     -0.2152  ***\n",
-      "last_review_rang               -0.4149    0.0284 0.0000     -0.4706     -0.3592  ***\n",
-      "minimum_nights_class           -0.0545    0.0012 0.0000     -0.0569     -0.0521  ***\n",
+      "reviews_per_month              -0.2574    0.0221 0.0000     -0.3007     -0.2141  ***\n",
+      "last_review_rang               -0.4147    0.0284 0.0000     -0.4704     -0.3591  ***\n",
+      "minimum_nights_class           -0.0543    0.0012 0.0000     -0.0567     -0.0519  ***\n",
       "---\n",
       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 \n",
       "\n",
-      "Somers' D = 0.464\n"
+      "Somers' D = 0.466\n"
      ]
     }
    ],
