--- a/wargaming_task/wargaming_task_second.ipynb
+++ b/wargaming_task/wargaming_task_second.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    '/opt/kate_repo/real_data_analysis/wargaming_task/second_task.csv')\n"
+    "    '/opt/kate_repo/real_data_analysis/wargaming_task/second_task.csv')"
    ]
   },
   {
@@ -239,8 +239,8 @@
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
-    "engine = create_engine(\n",
-    "    'postgresql://postgres:postgres@localhost/sql_example')"
+    "# engine = create_engine(\n",
+    "#     'postgresql://postgres:postgres@localhost/sql_example')"
    ]
   },
   {
@@ -261,22 +261,34 @@
     "# Instantiate sqlachemy.create_engine object\n",
     "engine = create_engine('postgresql://postgres:postgres@localhost/sql_example')\n",
     "\n",
-    "# Save the data from dataframe to\n",
-    "# postgres table \"second_task\"\n",
+    "# Save the data from dataframe to postgres table \"second_task\"\n",
     "df.to_sql(\n",
-    "    'wargaming', \n",
+    "    'wargaming',\n",
     "    engine,\n",
     "    index=False # Not copying over the index\n",
     ")\n",
     "\n",
-    "# Save the data from dataframe to\n",
-    "# postgres table \"second_task_table2\"\n",
+    "# Save the data from dataframe to postgres table \"second_task_table2\"\n",
     "df_second.to_sql(\n",
-    "    'wargaming_second', \n",
+    "    'wargaming_second',\n",
     "    engine,\n",
     "    index=False # Not copying over the index\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
