--- a/city_price_analysis_on_date.ipynb
+++ b/city_price_analysis_on_date.ipynb
@@ -1537,10 +1537,34 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "host_name\n",
+       "(Napoleon Suarez)                     1\n",
+       "08028                                 1\n",
+       "88delaRambla                          1\n",
+       "A                                     2\n",
+       "A Team Member Of The Ronda Lesseps    1\n",
+       "                                     ..\n",
+       "然                                     1\n",
+       "真珍                                    1\n",
+       "纯洁                                    1\n",
+       "莉莉                                    1\n",
+       "현우                                    1\n",
+       "Name: host_id, Length: 4178, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# словарь уникальных значений с учетом группировки по host_id\n",
-    "dict_name_host = df.groupby(df.host_name)['host_id'].nunique()"
+    "dict_name_host = df.groupby(df.host_name)['host_id'].nunique()\n",
+    "dict_name_host"
    ]
   },
   {
@@ -2396,15 +2420,15 @@
     {
      "data": {
       "text/plain": [
-       "{'Les Corts': 1,\n",
-       " 'Eixample': 2,\n",
-       " 'Sarrià-Sant Gervasi': 3,\n",
-       " 'Horta-Guinardó': 4,\n",
-       " 'Gràcia': 5,\n",
-       " 'Sant Martí': 6,\n",
-       " 'Ciutat Vella': 7,\n",
-       " 'Sants-Montjuïc': 8,\n",
-       " 'Nou Barris': 9,\n",
+       "{'Sants-Montjuïc': 1,\n",
+       " 'Gràcia': 2,\n",
+       " 'Nou Barris': 3,\n",
+       " 'Eixample': 4,\n",
+       " 'Les Corts': 5,\n",
+       " 'Ciutat Vella': 6,\n",
+       " 'Sarrià-Sant Gervasi': 7,\n",
+       " 'Horta-Guinardó': 8,\n",
+       " 'Sant Martí': 9,\n",
        " 'Sant Andreu': 10}"
       ]
      },
@@ -2617,7 +2641,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f0f882746d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7ff87e5fc280>"
       ]
      },
      "execution_count": 81,
@@ -2657,7 +2681,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f0f83f2de80>"
+       "<seaborn.axisgrid.FacetGrid at 0x7ff8aa282160>"
       ]
      },
      "execution_count": 82,
@@ -3051,7 +3075,7 @@
     {
      "data": {
       "text/plain": [
-       "<bevel.linear_ordinal_regression.OrderedLogit at 0x7f0f83023e50>"
+       "<bevel.linear_ordinal_regression.OrderedLogit at 0x7ff87d5b4c10>"
       ]
      },
      "execution_count": 94,
@@ -3077,18 +3101,18 @@
       "n=19867\n",
       "                                  beta  se(beta)      p  lower 0.95  upper 0.95     \n",
       "attribute names                                                                     \n",
-      "neighbourhood_index            -0.0040    0.0006 0.0000     -0.0053     -0.0027  ***\n",
-      "room_class                      2.1058    0.0309 0.0000      2.0453      2.1663  ***\n",
+      "neighbourhood_index            -0.0035    0.0007 0.0000     -0.0048     -0.0023  ***\n",
+      "room_class                      2.1060    0.0309 0.0000      2.0455      2.1666  ***\n",
       "availability_365                0.0008    0.0001 0.0000      0.0006      0.0009  ***\n",
-      "calculated_host_listings_count  0.0018    0.0004 0.0000      0.0010      0.0027  ***\n",
+      "calculated_host_listings_count  0.0019    0.0004 0.0000      0.0010      0.0027  ***\n",
       "number_of_reviews               0.0031    0.0004 0.0000      0.0024      0.0038  ***\n",
-      "reviews_per_month              -0.2574    0.0221 0.0000     -0.3007     -0.2141  ***\n",
-      "last_review_rang               -0.4147    0.0284 0.0000     -0.4704     -0.3591  ***\n",
-      "minimum_nights_class           -0.0543    0.0012 0.0000     -0.0567     -0.0519  ***\n",
+      "reviews_per_month              -0.2558    0.0221 0.0000     -0.2991     -0.2125  ***\n",
+      "last_review_rang               -0.4176    0.0284 0.0000     -0.4733     -0.3620  ***\n",
+      "minimum_nights_class           -0.0542    0.0012 0.0000     -0.0567     -0.0518  ***\n",
       "---\n",
       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 \n",
       "\n",
-      "Somers' D = 0.466\n"
+      "Somers' D = 0.465\n"
      ]
     }
    ],
