--- a/digital_line/digital_line_clients_info.ipynb
+++ b/digital_line/digital_line_clients_info.ipynb
@@ -25,12 +25,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "import seaborn as sns\n",
-    "sns.set()\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import normaltest"
+    "import numpy as np"
    ]
   },
   {
@@ -274,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the data from dataframe to postgres table \"Customer_info\"\n",
-    "# df.to_sql(\n",
-    "#     'customer_info',\n",
-    "#     engine,\n",
-    "#     index=False # Not copying over the index\n",
-    "# )\n",
+    "df.to_sql(\n",
+    "    'customer_info',\n",
+    "    engine,\n",
+    "    index=False # Not copying over the index\n",
+    ")\n",
     "\n",
     "# Save the data from dataframe to postgres table \"Transactions_info\"\n",
     "df_second.to_sql(\n",
@@ -292,13 +287,6 @@
     "    index=False # Not copying over the index\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
