Вызов функции def

--- a/python_def.ipynb
+++ b/python_def.ipynb
@@ -130,6 +130,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -178,9 +183,121 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Negativ\n"
+     ]
+    }
+   ],
+   "source": [
+    "def positive():\n",
+    "    print(\"Positiv\")\n",
+    "\n",
+    "\n",
+    "def negativ():\n",
+    "    print(\"Negativ\")\n",
+    "\n",
+    "\n",
+    "def test():\n",
+    "    a = int(input())\n",
+    "    if a > 0:\n",
+    "        positive()\n",
+    "    else:\n",
+    "        negativ()\n",
+    "\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "forecast() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-9cb96a387fce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcandy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mforecast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: forecast() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Positiv\n"
+     ]
+    }
+   ],
+   "source": [
+    "def positive():\n",
+    "    return \"Positiv\"\n",
+    "\n",
+    "\n",
+    "def negativ():\n",
+    "    return(\"Negativ\")\n",
+    "\n",
+    "\n",
+    "def test():\n",
+    "    a = int(input())\n",
+    "    if a > 0:\n",
+    "        print(positive())\n",
+    "    else:\n",
+    "        print(negativ())\n",
+    "\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def positive():\n",
+    "    return \"Positiv\"\n",
+    "\n",
+    "\n",
+    "def negativ():\n",
+    "    return(\"Negativ\")\n",
+    "\n",
+    "\n",
+    "def test():\n",
+    "    a = int(input())\n",
+    "    result = 0\n",
+    "    \n",
+    "    if a > 0:\n",
+    "        result = positive()\n",
+    "    else:\n",
+    "        result = negativ()\n",
+    "        \n",
+    "    print(result)\n",
+    "\n",
+    "test()"
+   ]
   }
  ],
  "metadata": {
