--- a/python_def.ipynb
+++ b/python_def.ipynb
@@ -257,7 +257,7 @@
     "\n",
     "\n",
     "def negativ():\n",
-    "    return(\"Negativ\")\n",
+    "    return (\"Negativ\")\n",
     "\n",
     "\n",
     "def test():\n",
@@ -273,31 +273,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Positiv\n"
+     ]
+    }
+   ],
    "source": [
     "def positive():\n",
     "    return \"Positiv\"\n",
     "\n",
     "\n",
     "def negativ():\n",
-    "    return(\"Negativ\")\n",
+    "    return (\"Negativ\")\n",
     "\n",
     "\n",
     "def test():\n",
     "    a = int(input())\n",
     "    result = 0\n",
-    "    \n",
+    "\n",
     "    if a > 0:\n",
     "        result = positive()\n",
     "    else:\n",
     "        result = negativ()\n",
-    "        \n",
+    "\n",
     "    print(result)\n",
+    "\n",
     "\n",
     "test()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cilinder():\n",
+    "    r = int(input())\n",
+    "    h = int(input())\n",
+    "    side = r * 2 * h * 3.14\n",
+    "    circle = 3.14 * r**2\n",
+    "    full = side + circle * 2\n",
+    "    return full\n",
+    "\n",
+    "\n",
+    "test = cilinder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "131.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cylinder():\n",
+    "    try:\n",
+    "        r = int(input())\n",
+    "        h = int(input())\n",
+    "    except ValueError:\n",
+    "        return\n",
+    "    side = r * 2 * h * 3.14\n",
+    "    circle = 3.14 * r**2\n",
+    "    full = side + circle * 2\n",
+    "    return full\n",
+    "\n",
+    "\n",
+    "print(cylinder())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "Сторона 37.68 m^2\n",
+      "Окружность 12.56 m^2\n",
+      "Площадь 62.80 m^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cylinder():\n",
+    "    try:\n",
+    "        r = float(input())\n",
+    "        h = float(input())\n",
+    "    except ValueError:\n",
+    "        return\n",
+    "    side = r * h * 3.14 * 2\n",
+    "    circle = r**2 * 3.14\n",
+    "    full = side + circle * 2\n",
+    "    return side, circle, full\n",
+    "\n",
+    "\n",
+    "si, ci, fu = cylinder()\n",
+    "print(\"Сторона %.2f m^2\" % si)\n",
+    "print(\"Окружность %.2f m^2\" % ci)\n",
+    "print(\"Площадь %.2f m^2\" % fu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Кортеж\n",
+    "a,b,c=10,15,20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
