Вызов функции def

--- a/python_def.ipynb
+++ b/python_def.ipynb
@@ -385,18 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "3\n",
-      "Сторона 37.68 m^2\n",
-      "Окружность 12.56 m^2\n",
-      "Площадь 62.80 m^2\n"
+      "5\n",
+      "6\n",
+      "Сторона 188.40 m^2\n",
+      "Окружность 78.50 m^2\n",
+      "Площадь 345.40 m^2\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "# Кортеж\n",
-    "a,b,c=10,15,20"
+    "a, b, c = 10, 15, 20"
    ]
   },
   {
@@ -450,11 +450,109 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Напишите программу, в которой вызывается функция, запрашивающая с ввода две строки и возвращающая в программу результат их конкатенации. Выведите результат на экран."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def concatenaciya():\n",
+    "    a = str(input())\n",
+    "    b = str(input())\n",
+    "    full = (a + ',' + b)\n",
+    "    return full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,2,3\n",
+      "234,5,6,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1,2,3,234,5,6,'"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concatenaciya()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Напишите функцию, которая считывает с клавиатуры числа и перемножает их до тех пор, пока не будет введен 0. Функция должна возвращать полученное произведение. Вызовите функцию и выведите на экран результат ее работы."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_zero():\n",
+    "    number = int(input())\n",
+    "    a = 1\n",
+    "    if number == 0:\n",
+    "        return 0\n",
+    "    while number != 0:\n",
+    "        a *= number\n",
+    "        number = int(input())\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3024"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_zero()"
+   ]
   }
  ],
  "metadata": {
