Вызов функции def

--- a/yandex_interview_task.ipynb
+++ b/yandex_interview_task.ipynb
@@ -19,16 +19,16 @@
    "metadata": {},
    "source": [
     "План:\n",
-    "    Подсчет количества повротений уникальных значений списка (получаем Новый список)\n",
-    "    Выбор минимального числа из Нового списка для опредления максимального числа для вывода результата\n",
-    "    Установка счетчика с диапазоном от 1 до минимального числа из Нового списка\n",
+    "    Подсчет количества повротений уникальных значений списка (получаем Новый список) +\n",
+    "    Выбор минимального числа из Нового списка для опредления максимального числа для вывода результата +\n",
+    "    Установка счетчика с диапазоном от 1 до минимального числа из Нового списка +\n",
     "    Деление каждого числа из Нового списка на числа счетчика\n",
     "    Вывод максимального числа счетчика для которого остаток от деления был равен 0 для всех значений Нового списка."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,55 +46,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def devide_candy_for_friends(candies_list):\n",
+    "    my_dict = {item: candies_list.count(item) for item in candies_list}\n",
+    "    counter=min(my_dict.values())\n",
+    "    for item in my_dict.values():\n",
+    "        candy_in_box=item/counter\n",
+    "        print (candy_in_box)\n",
+    "        if item % counter == 0:\n",
+    "            print(1)\n",
+    "        else:\n",
+    "            print(0)\n",
+    "#             counter-=1\n",
+    "#         return counter\n",
+    "        \n",
+    "#     return counter\n",
+    "#         return my_dict\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "===\n",
-      "None\n"
+      "1.0\n",
+      "1\n",
+      "1.3333333333333333\n",
+      "0\n",
+      "1.6666666666666667\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "# candies_list - аргумент/параметр для переиспользования\n",
-    "def devide_candy_for_friends(candies_list):\n",
-    "    #     for item in candies_list:\n",
-    "    #         print(item)\n",
-    "    x = 0\n",
-    "\n",
-    "\n",
-    "#     return len(candies_list)\n",
-    "\n",
-    "friends = devide_candy_for_friends(candies)\n",
-    "print(friends)\n",
-    "print(\"===\")\n",
-    "\n",
-    "friends = devide_candy_for_friends(candies_second)\n",
-    "print(friends)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'a', 'a', 'b', 'b', 'b', 'b', 'c', 'c', 'c', 'c', 'c']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "candies"
+    "devide_candy_for_friends(candies)"
    ]
   },
   {
