Вызов функции def

--- a/yandex_interview_task.ipynb
+++ b/yandex_interview_task.ipynb
@@ -22,13 +22,13 @@
     "    Подсчет количества повротений уникальных значений списка (получаем Новый список) +\n",
     "    Выбор минимального числа из Нового списка для опредления максимального числа для вывода результата +\n",
     "    Установка счетчика с диапазоном от 1 до минимального числа из Нового списка +\n",
-    "    Деление каждого числа из Нового списка на числа счетчика\n",
+    "    Деление каждого числа из Нового списка на числа счетчика +\n",
     "    Вывод максимального числа счетчика для которого остаток от деления был равен 0 для всех значений Нового списка."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,44 +46,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "def devide_candy_for_friends(candies_list):\n",
-    "    my_dict = {item: candies_list.count(item) for item in candies_list}\n",
-    "    counter=min(my_dict.values())\n",
-    "    for item in my_dict.values():\n",
-    "        candy_in_box=item/counter\n",
-    "        print (candy_in_box)\n",
-    "        if item % counter == 0:\n",
-    "            print(1)\n",
-    "        else:\n",
-    "            print(0)\n",
-    "#             counter-=1\n",
-    "#         return counter\n",
+    "    count_per_candys_dict = {\n",
+    "        item: candies_list.count(item)\n",
+    "        for item in candies_list\n",
+    "    }\n",
+    "    counter_friends = min(count_per_candys_dict.values())\n",
+    "\n",
+    "    candy_in_box_list = []\n",
+    "\n",
+    "    for item in count_per_candys_dict.values():\n",
+    "        tail_candy_in_box = item % counter_friends\n",
+    "        candy_in_box_list.append(tail_candy_in_box)\n",
+    "\n",
+    "        print(f\"tail_box = {candy_in_box_list}\")\n",
     "        \n",
-    "#     return counter\n",
-    "#         return my_dict\n",
-    "    "
+    "\n",
+    "        if tail_candy_in_box != 0:\n",
+    "            print(f\"counter_friends !=0  = {counter_friends}\")\n",
+    "            counter_friends -= 1\n",
+    "        else:\n",
+    "            print(f\"counter_friends = {counter_friends}\")\n",
+    "            return counter_friends\n",
+    "\n",
+    "\n",
+    "#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "1\n",
-      "1.3333333333333333\n",
-      "0\n",
-      "1.6666666666666667\n",
-      "0\n"
+      "tail_box = [0]\n",
+      "counter_friends = 3\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
