yandex_task_one

--- a/yandex_interview_task.ipynb
+++ b/yandex_interview_task.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,29 +57,31 @@
     "    }\n",
     "    counter_friends = min(count_per_candys_dict.values())\n",
     "\n",
-    "    candy_in_box_list = []\n",
+    "    friends_is_found = False\n",
+    "    while not friends_is_found:\n",
+    "        candy_in_box_list = []\n",
+    "        for item in count_per_candys_dict.values():\n",
+    "            tail_candy_in_box = item % counter_friends\n",
+    "            candy_in_box_list.append(tail_candy_in_box)\n",
     "\n",
-    "    for item in count_per_candys_dict.values():\n",
-    "        tail_candy_in_box = item % counter_friends\n",
-    "        candy_in_box_list.append(tail_candy_in_box)\n",
     "\n",
-    "        print(f\"tail_box = {candy_in_box_list}\")\n",
-    "        \n",
+    "            print(f\"tail_box = {candy_in_box_list}\")\n",
     "\n",
-    "        if tail_candy_in_box != 0:\n",
-    "            print(f\"counter_friends !=0  = {counter_friends}\")\n",
+    "        if sum(candy_in_box_list) != 0:\n",
     "            counter_friends -= 1\n",
+    "            print(f\"counter_friends !=0  = {counter_friends}\")\n",
+    "            \n",
+    "            if counter_friends == 1:\n",
+    "                return counter_friends\n",
     "        else:\n",
     "            print(f\"counter_friends = {counter_friends}\")\n",
-    "            return counter_friends\n",
-    "\n",
-    "\n",
-    "#"
+    "            friends_is_found = True\n",
+    "            return counter_friends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -87,16 +89,22 @@
      "output_type": "stream",
      "text": [
       "tail_box = [0]\n",
-      "counter_friends = 3\n"
+      "tail_box = [0, 1]\n",
+      "tail_box = [0, 1, 2]\n",
+      "counter_friends !=0  = 2\n",
+      "tail_box = [1]\n",
+      "tail_box = [1, 0]\n",
+      "tail_box = [1, 0, 1]\n",
+      "counter_friends !=0  = 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "1"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
