yandex_task_one

--- a/yandex_task_one/yandex_interview_task.ipynb
+++ b/yandex_task_one/yandex_interview_task.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "У вас есть список конфет разных типов, вам нужно собрать одинаковые наборы для своих друзей.\n",
-    "\n",
     "Какому максимальному числу друзей вы сможете собрать наборы так, чтобы раздарить все конфеты.\n",
-    "\n",
     "Реализуйте функцию на питоне, которая принимает на вход список конфет и отдает максимальное число друзей. Формат входных данных - список строк.\n",
     "\n",
     "ТЕСТ: ['a', 'a', 'a', 'b', 'b', 'b', 'b', 'c', 'c', 'c', 'c', 'c'] ОТВЕТ:1\n",
@@ -28,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candies_third = [\n",
+    "    'a', 'a', 'a', 'b', 'b', 'b', 'b', 'c', 'c', 'c', 'c', 'c', 'd', 'd'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,61 +73,44 @@
     "            tail_candy_in_box = item % counter_friends\n",
     "            candy_in_box_list.append(tail_candy_in_box)\n",
     "\n",
-    "\n",
-    "            print(f\"tail_box = {candy_in_box_list}\")\n",
-    "\n",
     "        if sum(candy_in_box_list) != 0:\n",
     "            counter_friends -= 1\n",
-    "            print(f\"counter_friends !=0  = {counter_friends}\")\n",
-    "            \n",
+    "\n",
     "            if counter_friends == 1:\n",
-    "                return counter_friends\n",
+    "                friends_is_found = True\n",
     "        else:\n",
-    "            print(f\"counter_friends = {counter_friends}\")\n",
     "            friends_is_found = True\n",
-    "            return counter_friends"
+    "\n",
+    "        print(f\"Максимальное число друзей = {counter_friends}\")\n",
+    "        return counter_friends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tail_box = [0]\n",
-      "tail_box = [0, 1]\n",
-      "tail_box = [0, 1, 2]\n",
-      "counter_friends !=0  = 2\n",
-      "tail_box = [1]\n",
-      "tail_box = [1, 0]\n",
-      "tail_box = [1, 0, 1]\n",
-      "counter_friends !=0  = 1\n"
+      "Максимальное число друзей = 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "devide_candy_for_friends(candies)"
+    "devide_candy_for_friends(candies_second)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
