--- a/python_def_ and_object_oriented_programming.ipynb
+++ b/python_def_ and_object_oriented_programming.ipynb
@@ -536,8 +536,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Наследование"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +553,26 @@
     "    def shoping_bag(price):               # shoping_bag - атрибут и метод класса count_nats\n",
     "        invoice = price * count_nats.nats\n",
     "        return invoice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_nats.shoping_bag(8)"
    ]
   },
   {
@@ -644,40 +671,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "class count_nats:\n",
     "    nats = 5                              # nats - атрибут и свойство (поле) класса count_nats\n",
-    "    def shoping_bag(self,price):          # shoping_bag - атрибут и метод класса count_nats\n",
-    "        invoice = price * count_nats.nats #\n",
+    "    def shoping_bag(self,price):          # shoping_bag - атрибут и метод класса count_nats \n",
+    "        invoice = price * self.nats\n",
     "        return invoice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_nats.shoping_bag(\"self\",2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -695,13 +702,63 @@
        "500"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dinner.shoping_bag(100)"
+    "dinner.shoping_bag(100) # объект наследует поле nats от класса"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "900"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner.nats=100         #объект завел собственное поле\n",
+    "dinner.shoping_bag(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dinner.tommorow=\"porridge\"  #добавление нового поля к объекту (not good)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'porridge'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner.tommorow  "
    ]
   },
   {
